fix  header overflow on mobile

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,6 +5,6 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding: 0px;
     margin: 0;
 }
