--- a/src/App/Components/AlbumCard/index.css
+++ b/src/App/Components/AlbumCard/index.css
@@ -112,9 +112,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
-        -webkit-line-clamp: 2;
+        -webkit-line-clamp: 1;
         /* number of lines to show */
-        line-clamp: 2;
+        line-clamp: 1;
         -webkit-box-orient: vertical;
         font-size: min(1em, 5vw)
     }
@@ -123,6 +123,14 @@
 @media (min-width: 767px) {
     .album-title-text {
         /* Show only 2 lines of text and ellipsis for rest */
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        /* number of lines to show */
+        line-clamp: 1;
+        -webkit-box-orient: vertical;
+
         font-size: min(1em, 2vw)
     }
 }
