--- a/src/App/Components/CardGrid/index.css
+++ b/src/App/Components/CardGrid/index.css
@@ -1,6 +1,6 @@
 .card-grid {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    height: 85%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
