--- a/src/App/Components/Header/index.css
+++ b/src/App/Components/Header/index.css
@@ -8,8 +8,10 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
+    overflow: hidden;
 
 }
+
 
 .search-input {
     padding: 0px;
@@ -57,7 +59,6 @@
 
 .filter-options-column {
     height: 100%;
-
 }
 
 .search-input>input:focus {
@@ -70,7 +71,6 @@
     height: 100%;
     display: flex;
     padding: 10px;
-
 }
 
 .sort-radio-group {
@@ -88,7 +88,6 @@
     height: 60%;
     overflow: hidden;
     display: flex;
-
 }
 
 .release-date-slider-column {
@@ -96,7 +95,7 @@
 }
 
 .sort-selection-column {
-    width: 60%;
+    /* width: 60%; */
 }
 
 .add-review-column,
